# orthrus

./: .gitignore  .orthrus.dev.json.example  .orthrus.toml.example  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  config.toml.example  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci-back.yml  dependabot.yml
app/: App.css  App.tsx
app/components/: Preview.tsx  Terminal.tsx
app/components/layout/: Pane.tsx  SplitView.tsx  index.ts
app/hooks/: useConfig.test.ts  useConfig.ts  useDevConfig.test.ts  useDevConfig.ts  useProjectConfig.test.ts  useProjectDialog.ts  useSphinx.ts
app/types/: config.ts  devConfig.ts
app/utils/: logger.ts
back/: Cargo.toml  tauri.conf.json
back/src/: config.rs  lib.rs  main.rs  sphinx.rs  terminal.rs
