[package]
name = "orthrus"
version = "0.1.0"
description = "Sphinx documentation editor with live preview"
authors = ["peacock0803sz"]
edition = "2021"

[lib]
name = "orthrus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# PTY management
portable-pty = "0.9"

# Async runtime
tokio = { version = "1", features = ["sync", "time"] }

# Random for nonce generation
rand = "0.8"

